--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "inquirer": "^9.1.0",
     "jest": "^28.1.3"
   },
+  "type": "module",
   "name": "team-profile-generator",
   "description": "",
   "version": "1.0.0",
